Part 2 - CRUD operations, swagger endpoint
